recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:17: error: expected start of definition
	override def run() {
                 ^Sierpinski:21: error: Unmatched closing brace '}' ignored here
}
^